# quarto-website

./: .Rhistory  .dockerignore  .gitignore  CNAME  FellowshipRefs.bib  Makefile  README.md  REFRESH.md.lol  _paper_sources.yml  _publish.yml  _quarto.yml  about.qmd  blog.qmd  cv.html  cv.qmd  dimmery.scss  env.yaml  fetch_paper_template.sh  fetch_papers.py  fetch_papers.sh  fetch_papers_2.py  fetch_papers_README.md  fonts.css  icon_utils.py  includes.html  index.qmd  netlify.toml  papers.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  research.md  research.qmd  resources.qmd  software.md  software.qmd  software.quarto_ipynb  software.yaml  yq.1
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  postCreateCommand.sh  setup_env.sh  test_devcontainer_setup.sh
.github/scripts/: README.md  manage_email_list.py  send_newsletter.py
.github/workflows/: build.yml  newsletter.yml  publish-to-listmonk.yml  publish.yml  static.yml
_site/: about.html  blog.html  blog.xml  cv.html  fonts.css  index.html  listing.html  listing.xml  listings.json  research.html  research.ipynb  robots.txt  search.json  sitemap.xml  software.html
_site/research/: list-of-pubs.html  papers.html
posts/: _metadata.yml
presentations/: _metadata.yml
renv/: settings.json
research/: MitchellPublications.bib  _paper_sources.yml  list-of-pubs.html.md  list-of-pubs.md  list-of-pubs.qmd  list-of-pubs.quarto_ipynb  papers.qmd  presentations.qmd  publications.yml  quarto-website.code-workspace
scripts/: convert_images.py  convert_substack.py  purge-css.sh
(+142 files in other folders)
