[project]
name = "quarto-website"
version = "0.1.0"
description = ""
authors = [
    {name = "Drew Dimmery",email = "web@ddimmery.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "requests (>=2.25.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false